fix horizontal scroll on DashboardItemJobIndex component

--- a/frontend/src/components/Dashboard/DashboardItemJobIndex/DashboardItemJobIndex.scss
+++ b/frontend/src/components/Dashboard/DashboardItemJobIndex/DashboardItemJobIndex.scss
@@ -10,6 +10,7 @@
     align-items: center;
     border-radius: 10px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .dashboard-item-job-index-container::-webkit-scrollbar {
